5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1756_1576.log
== TEST (2019-05-22 14:41:42) 
-- CODE:
from numpy import*
v0 = array(eval(input()))
v1 = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:41:55) 
-- CODE:
from numpy import*
v0 = array(eval(input()))
v1 = array(eval(input()))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:10) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: "))))
v1 = array(eval(input("n1: "))))

pedra == 11
papel == 22
tesoura == 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1

print(size(v0))
	if(ve > vb):
		print(eu)
	elif(vb > ve):
		print(ba)
	else:
		print(em)

-- ERROR:
File "XXXX", line 2
    v0 = array(eval(input())))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:17) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra == 11
papel == 22
tesoura == 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1

print(size(v0))
	if(ve > vb):
		print(eu)
	elif(vb > ve):
		print(ba)
	else:
		print(em)

-- ERROR:
File "XXXX", line 32
    if(ve > vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:44) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1

print(size(v0))
	if(ve > vb):
		print(eu)
	elif(vb > ve):
		print(ba)
	else:
		print(em)

-- ERROR:
File "XXXX", line 32
    if(ve > vb):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:01) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1

print(size(v0))
if(ve > vb):
		print(eu)
elif(vb > ve):
		print(ba)
else:
		print(em)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:37) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1

print(size(v0))
if(ve > vb):
		print(eu)
elif(vb > ve):
		print(ba)
else:
		print(em)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:07) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

eu = "Eusapia vence"
ba = "Barsanulfo"
em = "Empate"

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		vb = vb + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print(eu)
elif(vb > ve):
		print(ba)
else:
		print(em)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:50:38) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0 == pedra and v1 == papel):
		vb = vb + 1
	elif(v1 == tesoura and v0 == papel):
		vb = vb + 1
	elif(v1 == tesoura  and v0 == pedra):
		ve = ve + 1
	elif(v0 == papel and v1 == pedra):
		ve = ve +1
	elif(v1 == papel and v0 == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:52:38) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura and v0[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura  and v0[c] == pedra):
		ve = ve + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v1[c] == papel and v0[c] == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:52:49) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura and v0[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura  and v0[c] == pedra):
		ve = ve + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v1[c] == papel and v0[c] == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- EXECUTION TIME:
0.369252
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:54:02) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura and v0[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura  and v0[c] == pedra):
		ve = ve + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v1[c] == papel and v0[c] == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:54:17) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura and v0[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura  and v0[c] == pedra):
		ve = ve + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v1[c] == papel and v0[c] == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- EXECUTION TIME:
0.353504
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:55:26) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura and v0[c] == papel):
		vb = vb + 1
	elif(v1[c] == tesoura  and v0[c] == pedra):
		ve = ve + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v1[c] == papel and v0[c] == tesoura):
		ve = ve + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- EXECUTION TIME:
0.514382
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EUSAPIA
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:57:29) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v0[c] == tesoura and v1[c] == papel):
		ve = ve + 1
	elif(v0[c] == tesoura  and v1[c] == pedra):
		vb = vb + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v0[c] == papel and v1[c] == tesoura):
		vb = vb + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:57:42) 
-- CODE:
from numpy import*
v0 = array(eval(input("n: ")))
v1 = array(eval(input("n1: ")))

pedra = 11
papel = 22
tesoura = 33

c = 0
ve = 0
vb = 0

while(c < size(v0)):
	if(v0[c] == pedra and v1[c] == tesoura):
		ve = ve + 1
	elif(v0[c] == pedra and v1[c] == papel):
		vb = vb + 1
	elif(v0[c] == tesoura and v1[c] == papel):
		ve = ve + 1
	elif(v0[c] == tesoura  and v1[c] == pedra):
		vb = vb + 1
	elif(v0[c] == papel and v1[c] == pedra):
		ve = ve +1
	elif(v0[c] == papel and v1[c] == tesoura):
		vb = vb + 1
	c = c + 1

print(size(v0))
if(ve > vb):
		print("EUSAPIA")
elif(vb > ve):
		print("BARSANULFO")
else:
		print("EMPATE")

-- EXECUTION TIME:
0.603867
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
